force-app/main/default/objects/clariti__Map_Geometry__c/clariti__Map_Geometry__c.object-meta.xml
<CustomObject>
    <description>Object used to capture the geometric details within a user’s map selection.</description>
    <label>Map Geometry</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Map Geometry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Geometries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>