force-app/main/default/objects/clariti__Map_Geometry__c/fields/clariti__Data__c.field-meta.xml
<CustomField>
    <fullName>clariti__Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>