force-app/main/default/objects/clariti__Map_Geometry__c/fields/clariti__ESRI_Layer_URL__c.field-meta.xml
<CustomField>
    <fullName>clariti__ESRI_Layer_URL__c</fullName>
    <label>ESRI Layer URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>