force-app/main/default/objects/clariti__Map_Geometry__c/fields/clariti__ESRI_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>clariti__ESRI_Object_Id__c</fullName>
    <externalId>true</externalId>
    <label>ESRI Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>