force-app/main/default/objects/clariti__Map_Geometry__c/fields/clariti__Map__c.field-meta.xml
<CustomField>
    <fullName>clariti__Map__c</fullName>
    <label>Map</label>
    <referenceTo>clariti__Map__c</referenceTo>
    <relationshipLabel>Map Geometries</relationshipLabel>
    <relationshipName>Map_Geometries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>