force-app/main/default/objects/clariti__Map_Geometry__c/fields/clariti__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>clariti__Record_Id__c</fullName>
    <description>Record Id of the parent record in salesforce to which this map geometry record is associated with.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>